feat: add information in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
     </maim>
     <footer class="footer">
         <div class="container">
-
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">&copy;2022</li>
+                    <li class="nav-item"><a href="https://github.com/chugalinskaa" class="nav-link">chugalinskaa</a></li>
+                    <li class="nav-item"><a href="https://rs.school/js/" class="nav-link"><img src="./assets/svg/rs_school_js.svg" alt="rsschool"></a></li>
+                </ul>
+            </nav>      
         </div>
     </footer>
 </body>
